--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 nav {
-	background-color: #D4145A
+	background-color: #D4145A;
+	padding-top: 10px;
 }
 
 body {
-	background-color: #252525	;
+	background-color: #252525;
 }
 
 h1, p {
@@ -12,4 +13,13 @@ h1, p {
 
 .conteiner{
 padding-bottom: 0px
+}
+
+.logo {
+	padding-top: 5px;
+	padding-left: 5px;
+}
+
+footer.page-footer {
+	background-color: #D4145A;
 }
