--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,79 @@
-nav {
-	background-color: #D4145A;
-	padding-top: 10px;
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
 }
 
-body {
-	background-color: #252525;
+nav {
+	background-color: #D4145A;
+	
 }
 
 h1, p {
 	color: white;
 }
 
-.conteiner{
-padding-bottom: 0px
-}
-
-.logo {
+.brand-logo {
 	padding-top: 5px;
 	padding-left: 5px;
+    height: 80%;
 }
 
-footer.page-footer {
+footer {
 	background-color: #D4145A;
+	margin: 0px;
+	clear: both;
+	position: relative;
+    bottom: 0;
+    display: block;
 }
+
+footer .row {	
+	margin-bottom: 0px;
+}
+
+body {
+	background-color: #252525;
+}
+
+.main_container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+.main_container video {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    z-index: 0;
+}
+
+.main_container div {
+    position: relative;
+    z-index: 1;
+}
+
+.overlay{
+	position: relative;
+    z-index: 1;
+}
+
+.overlay img {
+	margin: 20px
+}
+
+a .logo{
+    margin-left: 15px;
+    margin-top: 5px;
+    margin-bottom: 3px;
+}
+
